fix: fix bug with double to float class cast exception